# qt-demo

./: .gitignore  README.md  cmake_opencv_README.md  qt_memo.txt  utils_readme
dialog-demo/: Makefile  abstractwidget.cpp  abstractwidget.h  basewidget.cpp  basewidget.h  basewindow.cpp  basewindow.h  countpanel.cpp  countpanel.h  countpanel.ui  dialog-demo  dialog-demo.pro  langswitch.cpp  langswitch.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  moc_mainwindow.cpp  res.qrc  ui_mainwindow.h
dialog-demo/functions/: area.cpp  area.h
dialog-demo/lang/: cn.qm  en.qm  en.ts  zh.ts
dialog-demo/test/: test.pro
dialog-demo/util/: translatorutil.cpp  translatorutil.h
halcon-qt-demo/: halcon-qt-demo.pro  halconutil.cpp  halconutil.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  profile_halcon
mydll/: mydll.cpp  mydll.h  mydll.pro
opencv-demo/: opencv-demo.sln
opencv-demo/opencv-demo/: Main.cpp  opencv-demo.vcxproj
opencv-test/: .gitignore  CMakeLists.txt
opencv-test/src/: main.cpp
quick2-demo/: DatePicker.qml  Page1.qml  PageCanvas.qml  canvas-demo.js  main.qml  qml.qrc
root/: root.pro
shared_ptr-demo/: main.cpp  shared_ptr-demo.pro  shared_ptr_func.cpp  smart_ptr2.cpp  smart_ptr2.h  unique_ptr_func.cpp
sqlite-demo/: main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  sqlite-demo.pro
sqlite-demo/test/: test.pro
sqlite-demo/util/: dbdao.cpp  dbdao.h  stringutil.cpp  stringutil.h
utils/: dbconnectdlg.cpp  dbconnectdlg.h  dbconnectdlg.ui  dbdao.cpp  dbdao.h  msvc_compatible.h  taskcpp.h  translatorutil.cpp  translatorutil.h
(+6 files in other folders)
